--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+        <link rel="icon" href="https://www.theoplayer.com/hubfs/favicon3.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
-        <meta
-            name="description"
-            content="Web site created using create-react-app"
-        />
+        <meta name="description" content="THEOplayer ReactJS Sample" />
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
         <!--
           manifest.json provides metadata used when your web app is installed on a
@@ -25,7 +22,7 @@
           Learn how to configure a non-root public URL by running `npm run build`.
         -->
 
-        <title>THEOplayer x React App</title>
+        <title>THEOplayer ReactJS Sample</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
